@@ -95,8 +95,8 @@ TABLE OF CONTENTS
         * FreeQuest IRCd 2.1.3
         * Hybrid IRCd 7.0
         * Hyperion/DancerIRCd
-        * Inspircd 1.0.x
-        * Inspircd 1.1.x
+        * Inspircd 1.0.x (Beta 6 or later)
+        * Inspircd 1.1.x (Beta 8 or later)
         * IrcDreams 2.19.4
         * IRCU 2.10
         * LiquidIRCD 1.0.4
