@@ -9,9 +9,15 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="15"
+VERSION_BUILD="16"
 
 # $Log$
+#
+# BUILD : 1.3.0 (16)
+# BUGS  : N/A
+# NOTES : Fixed except support in P10 burst function. Fixed channel bans not parsed correctly on P10 burst. Fixed version replies not handled correctly 
+# in nefarious.
+# 
 #
 # BUILD : 1.3.0 (15)
 # BUGS  : N/A
